--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -32,13 +32,7 @@ body {
   box-shadow: 2px 15px -12px rgba(0, 0, 0, 0.57);
 }
 
-.color-circle {
-  width: 50px;
-  height: 50px;
-  margin-top: 8px;
-  border: 2px solid #d8d8d8;
-  border-radius: 50%;
-}
+
 
 
 .disabledButton {
@@ -88,6 +82,10 @@ li {
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.57);
 }
 
+/*
+Out-of-stock-img sert a rendre plus opaque une image 
+lorsqu’elle est en rupture de stock
+*/
 .out-of-stock-img {
   opacity:0.5
 }
